@@ -1,7 +1,7 @@
-# $NetBSD: Makefile,v 1.4 2004/10/03 00:13:23 tv Exp $
+# $NetBSD: Makefile,v 1.5 2004/10/10 07:30:23 jdolecek Exp $
 
 PKGNAME=		postgresql74-server-${BASE_VERS}
-PKGREVISION=	1
+PKGREVISION=		# empty
 SVR4_PKGNAME=		pstgs
 COMMENT=		PostgreSQL database server programs
 
